syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.pix";
option java_outer_classname = "KeyManager";
option objc_class_prefix = "HLW";

package br.com.zup.pix;

service KeyManagerService {
  rpc create(CreatePixKeyRequest) returns (CreatePixKeyResponse);
  rpc remove(RemovePixKeyMessage) returns (RemovePixKeyMessage);
}

enum KeyType {
  CPF = 0;
  TELL_NUMBER = 1;
  EMAIL = 2;
  RANDOM = 3;
}

enum AccountType {
  CONTA_CORRENTE = 0;
  CONTA_POUPANCA = 1;
}

message CreatePixKeyRequest {

  string clientId = 1;
  KeyType keyType = 2;
  string keyValue = 3;
  AccountType accountType = 4;

}

message CreatePixKeyResponse {

  string clientId = 1;
  string pixId = 2;

}

message RemovePixKeyMessage {

  string clientId = 1;
  string pixId = 2;

}